tests/snapshots/split_match__split_match_no_delimiter_in_item@001.snap
---
source: tests/split_match.rs
description: "input: items [\"foobar\", \"bazqux\"]\noptions: --split-match :"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  bazqux                                                                        "
"> foobar                                                                        "
"  2/2                                                                        0/0"
">                                                                               "
cursor: (24, 3)
