tests/snapshots/split_match__split_match_no_delimiter_in_item@002.snap
---
source: tests/split_match.rs
description: "input: items [\"foobar\", \"bazqux\"]\noptions: --split-match :\nafter:\n  @type \"foo\""
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"> foobar                                                                        "
"  1/2                                                                        0/0"
"> foo                                                                           "
cursor: (24, 6)
