tests/snapshots/split_match__split_match_or-2.snap
---
source: tests/split_match.rs
expression: buf + & cursor_pos
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  x:yz                                                                          "
"> a:bc                                                                          "
"  2/3                                                                        0/0"
"> a:b | x:y                                                                     "
cursor: (11, 23)
