tests/snapshots/split_match__split_match_or.snap
---
source: tests/split_match.rs
expression: buf + & cursor_pos
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  z:ab                                                                          "
"  x:yz                                                                          "
"> a:bc                                                                          "
"  3/3                                                                        0/0"
">                                                                               "
cursor: (2, 23)
