tests/snapshots/split_match__split_match_or@001.snap
---
source: tests/split_match.rs
description: "input: items [\"a:bc\", \"x:yz\", \"z:ab\"]\noptions: --split-match :"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  z:ab                                                                          "
"  x:yz                                                                          "
"> a:bc                                                                          "
"  3/3                                                                        0/0"
">                                                                               "
cursor: (24, 3)
