tests/snapshots/split_match__split_match_or@002.snap
---
source: tests/split_match.rs
description: "input: items [\"a:bc\", \"x:yz\", \"z:ab\"]\noptions: --split-match :\nafter:\n  @type \"a:b | x:y\""
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  x:yz                                                                          "
"> a:bc                                                                          "
"  2/3                                                                        0/0"
"> a:b | x:y                                                                     "
cursor: (24, 12)
