tests/snapshots/split_match__split_match_query_before_delimiter-2.snap
---
source: tests/split_match.rs
expression: buf + & cursor_pos
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  fbaz:boo                                                                      "
"  baz:foo                                                                       "
"  foo:qux                                                                       "
"> foo:bar                                                                       "
"  4/5                                                                        0/0"
"> foo                                                                           "
cursor: (5, 23)
