tests/snapshots/split_match__split_match_query_before_delimiter.snap
---
source: tests/split_match.rs
expression: buf + & cursor_pos
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  fbaz:boo                                                                      "
"  baz:foo                                                                       "
"  foo:qux                                                                       "
"  baz:qux                                                                       "
"> foo:bar                                                                       "
"  5/5                                                                        0/0"
">                                                                               "
cursor: (24, 3)
