tests/snapshots/split_match__split_match_query_before_delimiter@001.snap
---
source: tests/split_match.rs
description: "input: items [\"foo:bar\", \"baz:qux\", \"foo:qux\", \"baz:foo\", \"fbaz:boo\"]\noptions: --split-match :"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  fbaz:boo                                                                      "
"  baz:foo                                                                       "
"  foo:qux                                                                       "
"  baz:qux                                                                       "
"> foo:bar                                                                       "
"  5/5                                                                        0/0"
">                                                                               "
cursor: (24, 3)
