tests/snapshots/split_match__split_match_query_before_delimiter@002.snap
---
source: tests/split_match.rs
description: "input: items [\"foo:bar\", \"baz:qux\", \"foo:qux\", \"baz:foo\", \"fbaz:boo\"]\noptions: --split-match :\nafter:\n  @type \"foo\""
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  fbaz:boo                                                                      "
"  baz:foo                                                                       "
"  foo:qux                                                                       "
"> foo:bar                                                                       "
"  4/5                                                                        0/0"
"> foo                                                                           "
cursor: (24, 6)
